--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +10,34 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
 
-    <nav class="">
+    <header class="bg-[rgb(221,235,255)]">
+        <nav class="container mx-auto flex justify-between py-[50px] px-5 lg:px-0">
 
-    </nav>
+            <div class="">
+                <button id="blog-button"
+                    class="btn px-8 py-3 bg-[#B4F461] border-none rounded-[8px] text-[#111111] text-[18px] font-semibold">Blog</button>
+            </div>
 
-    <main class="">
-        
-    </main>
+            <div class="hidden md:flex md:items-center md:gap-2">
+                <img src="./assets/logo.png" alt="" class="">
+                <h3 class="text-[#111111] text-xl font-semibold">Save Bangladesh</h3>
+            </div>
+
+            <div class="flex items-center gap-2">
+                <img src="./assets/coin.png" alt="" class="">
+                <p class="text-[#111111] text-xl font-medium ">5500</p>
+            </div>
+
+        </nav>
+    </header>
 
     <!-- Add JavaScript File. -->
-    
+    <script src="./js/header.js"></script>
+    <script src="./js/main.js"></script>
+
 </body>
+
 </html>
