--- a/index.html
+++ b/index.html
@@ -28,16 +28,144 @@
 
             <div class="flex items-center gap-2">
                 <img src="./assets/coin.png" alt="" class="">
-                <p class="text-[#111111] text-xl font-medium ">5500</p>
+                <p id="my-current-balance" class="text-[#111111] text-xl font-medium ">5500</p>
             </div>
 
         </nav>
     </header>
 
+    <main class="container mx-auto mt-[100px] px-5 lg:px-0">
+
+        <div class="flex gap-3 justify-center">
+
+            <div class="">
+                <button id="donation-button"
+                    class="w-[160px] h-[60px] btn px-8 py-4 bg-[#B4F461] border-none rounded-[8px] text-[#111111] text-xl font-semibold">Donation</button>
+            </div>
+
+            <div class="">
+                <button id="history-button"
+                    class="w-[160px] h-[60px] btn px-8 py-4 rounded-[8px] text-[#111111] text-opacity-70 text-xl font-semibold">History</button>
+            </div>
+        </div>
+
+
+        <!-- Donation Part. -->
+        <div class="lg:px-[50px] pt-[50px] flex flex-col gap-10">
+
+            <!-- Card - 01 -->
+            <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 
+            rounded-[16px] p-8">
+                <img src="./assets/noakhali.png" alt="" class="">
+
+                <div class="flex flex-col justify-between gap-8 md:gap-0">
+
+                    <!-- Coin Button. -->
+                    <button class="btn w-[120px]">
+                        <img src="./assets/coin.png" alt="" class="">
+                        <p id="noakhali-current-amount" class="">0 BDT</p>
+                    </button>
+
+                    <h3 class="text-[#111111] text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</h3>
+
+                    <p class="font-[300]"> The recent floods in Noakhali have caused significant damage to homes
+                        infrastructure.
+                        Your donation will help provide essential supplies and to those affected by this disaster. Every
+                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
+                        and making a positive impact on the lives of those in need.</p>
+
+                    <div class="form-control">
+                        <input id="noakhali-donation-input" type="text" placeholder="Write Donation Amount"
+                            class="input input-bordered" required />
+                    </div>
+
+                    <div class="">
+                        <button id="noakhali-donation-button" class="w-full h-[60px] btn px-8 py-4 bg-[#B4F461] border-none rounded-[8px] 
+                        text-[#111111] text-xl font-semibold">Donate Now</button>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Card - 02 -->
+            <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 
+            rounded-[16px] p-8">
+                <img src="./assets/feni.png" alt="" class="">
+
+                <div class="flex flex-col justify-between gap-8 md:gap-0">
+
+                    <!-- Coin Button. -->
+                    <button class="btn w-[120px]">
+                        <img src="./assets/coin.png" alt="" class="">
+                        <p id="feni-current-amount" class="text-[12px]">600 BDT</p>
+                    </button>
+
+                    <h3 class="text-[#111111] text-xl font-bold">Donate for Flood Relief in Feni,Bangladesh</h3>
+
+                    <p class="font-[300]"> The recent floods in Feni have devastated local communities, leading to
+                        severe disruption and loss. Your generous donation will help provide immediate aid, including
+                        food, clean water, and medical supplies, to those affected by this calamity. Together, we can
+                        offer crucial support and help rebuild lives in the aftermath of this disaster. Every
+                        contribution counts towards making a real difference. Please consider donating today to assist
+                        those in urgent need.</p>
+
+                    <div class="form-control">
+                        <input id="feni-donation-input" type="text" placeholder="Write Donation Amount"
+                            class="input input-bordered" required />
+                    </div>
+
+                    <div class="">
+                        <button id="feni-donation-button" class="w-full h-[60px] btn px-8 py-4 bg-[#B4F461] border-none rounded-[8px] 
+                        text-[#111111] text-xl font-semibold">Donate Now</button>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <!-- Card - 03 -->
+            <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 
+            rounded-[16px] p-8">
+                <img src="./assets/quota-protest.png" alt="" class="">
+
+                <div class="flex flex-col justify-between gap-8 md:gap-0">
+
+                    <!-- Coin Button. -->
+                    <button class="btn w-[120px]">
+                        <img src="./assets/coin.png" alt="" class="w-[24px] h-[24px]">
+                        <p id="quota-current-amount" class="text-[12px]">2400 BDT</p>
+                    </button>
+
+                    <h3 class="text-[#111111] text-xl font-bold">Aid for Injured in the Quota Movement</h3>
+
+                    <p class="font-[300]"> The recent Quota movement has resulted in numerous injuries and significant
+                        hardship for many individuals. Your support is crucial in providing medical assistance,
+                        rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that
+                        injured individuals receive the care and support they need during this challenging time. Every
+                        donation plays a vital role in alleviating their suffering and aiding in their recovery. Please
+                        consider making a donation to support these brave individuals in their time of need.</p>
+
+                    <div class="form-control">
+                        <input id="quota-donation-input" type="text" placeholder="Write Donation Amount"
+                            class="input input-bordered" required />
+                    </div>
+
+                    <div class="">
+                        <button id="quota-donation-button" class="w-full h-[60px] btn px-8 py-4 bg-[#B4F461] border-none rounded-[8px] 
+                        text-[#111111] text-xl font-semibold">Donate Now</button>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </main>
+
     <!-- Add JavaScript File. -->
     <script src="./js/header.js"></script>
+    <script src="./js/common.js"></script>
     <script src="./js/main.js"></script>
-
 </body>
 
 </html>
