add a simple footer part

--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
 
     </main>
 
+    <footer class="bg-[rgb(221,235,255)] mt-[50px]">
+        <p class="py-[50px] text-center">Bangladesh Needs You So Let's Donate & Make a Change.</p>
+    </footer>
+
     <!-- Add JavaScript File. -->
     <script src="./js/header.js"></script>
     <script src="./js/common.js"></script>
