complete the transactions part

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
         <!-- Donation Part. -->
-        <div class="lg:px-[50px] pt-[50px] flex flex-col gap-10">
+        <div id="donation-part" class="lg:px-[50px] pt-[50px] flex flex-col gap-10">
 
             <!-- Card - 01 -->
             <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 
@@ -173,6 +173,10 @@
             </div>
 
         </div>
+
+
+        <!-- Transaction History. -->
+        <div id="transaction-container" class="hidden"></div>
 
     </main>
 
