fixed some issues & add the sticky note scrollbar in the header

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
 
             <div class="flex items-center gap-2">
                 <img src="./assets/coin.png" alt="" class="">
-                <p class="text-[#111111] text-xl font-medium ">5500</p>
+                <p id="my-current-balance" class="text-[#111111] text-xl font-medium ">5500</p>
             </div>
 
         </nav>
