--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
         </nav>
     </header>
 
-    <main class="container mx-auto mt-[100px] flex flex-col gap-10 px-[20px] lg:px-0">
+    <main class="container mx-auto mt-[100px] flex flex-col gap-10 px-[20px] lg:px-0 pb-[50px]">
 
         <h3 class="text-[#051d40] text-[32px] lg:text-[40px] font-bold mb-6 text-center">Frequently Asked Questions</h3>
         <div class="flex flex-col justify-between gap-6 lg:px-[100px]">
